--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -42,7 +42,7 @@ html[data-theme='light'] .skills__logo {
     padding: 0;
     box-sizing: border-box;
     vertical-align: baseline;
-    list-style: none;
+    /* list-style: none; */
 }
 
 body {
@@ -67,6 +67,8 @@ h1 {
 h2 {
     font-size: 2rem;
     text-align: center;
+    margin-bottom: 2rem;
+    letter-spacing: 0.4rem;
 }
 
 h1 b {
@@ -289,18 +291,27 @@ footer p {
 .projects {
     display: flex;
     flex-direction: column;
-    gap: 2rem;
-    background: var(--secondary-bg-color);
-    margin-top: -5.5rem;
-    align-items: center;
-    justify-content: flex-start;
+    gap: 1rem;
 }
 
 .projects__card {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
+    gap: 2rem;
+}
+
+.card__cover {
+    width: 100%;
+    border-radius: 0.5rem;
+    object-fit: cover;
+    object-position: center;
+}
+
+.card__body {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
     gap: 1rem;
 }
 
@@ -308,11 +319,34 @@ footer p {
     font-size: 1.5rem;
 }
 
-.card__description {
-    font-size: 1rem;
-    text-align: justify;
+.card__list {
+    margin: 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 }
 
+.card__description {
+    font-size: 1rem;
+    color: var(--title-color);
+    white-space: normal;
+}
+
+.card__buttons {
+    display: flex;
+}
+
+.projects__container {
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    gap: 2rem;
+}
+
+.a--button  {
+    display: flex;
+    flex-direction: column;
+}
 
 
 
@@ -338,7 +372,7 @@ footer p {
         min-width: 30%;
     }
 
-    main {
+    main, .projects {
         padding: 8rem 6rem 4rem 6rem;
     }
 
@@ -350,6 +384,10 @@ footer p {
 
     h1 {
         font-size: 4rem;
+    }
+
+    h2 {
+        font-size: 3rem;
     }
 
     .skills {
@@ -369,8 +407,31 @@ footer p {
     } */
 }
 
+@media (min-width: 992px) {
+    .projects__card {
+        flex-direction: row;
+    }
+
+    .projects__card.card--reverse {
+        flex-direction: row-reverse;
+        justify-content: space-between;
+    }
+
+    .card__cover {
+        width: 50%;
+    }
+}
+
 
 @media (min-width: 1200px) {
+
+    h1 {
+        font-size: 5rem;
+    }
+
+    h2 {
+        font-size: 4rem;
+    }
 
     main {
         padding: 12rem 6rem 2rem;
@@ -403,6 +464,41 @@ footer p {
     .skills__logo {
         height: 3rem;
     }
+
+    .projects__card {
+        flex-direction: row;
+    }
+
+    .card__cover {
+        width: 50%;
+    }
+
+    .card__body {
+        flex-direction: column;
+        justify-content: flex-end;
+        align-items: flex-start;
+    }
+
+    .card__list {
+        margin: 3rem;
+        gap: 1rem;
+    }
+
+    .card__title {
+        font-size: 3.25rem;
+    }
+
+    .card__description {
+        font-size: 1.25rem;
+    }
+
+    .card__buttons .btn {
+        width: auto;
+    }
+
+    .a--button button {
+        width: auto;
+    }
 }
 
 
@@ -410,6 +506,10 @@ footer p {
 
     h1 {
         font-size: 6.25rem;
+    }
+
+    h2 {
+        font-size: 5rem;
     }
 
     p {
