--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -42,7 +42,7 @@ html[data-theme='light'] .skills__logo {
     padding: 0;
     box-sizing: border-box;
     vertical-align: baseline;
-    /* list-style: none; */
+    list-style: none;
 }
 
 body {
@@ -324,6 +324,11 @@ footer p {
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    list-style: circle;
+}
+
+.card__list li {
+    list-style: circle;
 }
 
 .card__description {
@@ -347,6 +352,42 @@ footer p {
     display: flex;
     flex-direction: column;
 }
+
+.hidden {
+    display: none !important;
+}
+
+
+#popup {
+    position: fixed; /* Certifica-se de que o popup está fixo na tela */
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.popup-content {
+    background: white;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    position: relative; /* Garantir que o botão de fechar seja posicionado corretamente */
+}
+
+#closePopupBtn {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+    font-size: 20px;
+}
+
+
 
 
 
@@ -405,6 +446,8 @@ footer p {
         justify-content: center;
         margin-top: 4rem;
     } */
+
+
 }
 
 @media (min-width: 992px) {
