--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -500,12 +500,12 @@ footer p {
 }
 
 #popup {
-    position: fixed; /* Certifica-se de que o popup está fixo na tela */
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.5);
+    background: var(--primary-bg-color);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -515,9 +515,9 @@ footer p {
     background: white;
     padding: 20px;
     border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 10px var(--primary-bg-color);
     text-align: center;
-    position: relative; /* Garantir que o botão de fechar seja posicionado corretamente */
+    position: relative;
 }
 
 #closePopupBtn {
@@ -526,6 +526,24 @@ footer p {
     right: 10px;
     cursor: pointer;
     font-size: 20px;
+}
+
+#backToTop {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: var(--link-color);
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 15px 25px;
+    cursor: pointer;
+    z-index: 999;
+    display: none;
+}
+
+#backToTop:hover {
+    background-color: var(--link-color); /* Cor verde do Google, ao passar o mouse */
 }
 
 
@@ -584,6 +602,8 @@ footer p {
         justify-content: center;
         margin-top: 4rem;
     } */
+
+
 
 
 }
